--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 #canvas1 {
-    border: 5px solid black;
+    border: 5px solid rgb(22, 22, 22);
     position: absolute;
     top: 50%;
     left: 50%;
